Feat 그룹이벤트 적용
점이벤트를 그룹화하여 렌더링

--- a/src/assets/css/plum-chart-core.css
+++ b/src/assets/css/plum-chart-core.css
@@ -148,6 +148,11 @@ img {
     height: var(--tc-side-canvas-content-height);
 }
 
+.tc-side-canvas-group-event {
+    position: absolute;
+    border: 1px solid var(--plc-border-color);
+}
+
 .tc-main-box {
     overflow: hidden;
     width: 100%;
